--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
   <title>Card Gallery</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="icon" type="image/jpeg" href="assets/img/amarantha-logo.jpg">
   <link rel="icon" type="image/svg+xml" href="assets/img/amarantha-logo.svg">
   <style>
     :root {
@@ -46,7 +47,7 @@
       width: 260px;
       background: #f5ecda;
       border-right: 1px solid var(--border);
-      padding: 24px 20px 28px;
+      padding: 20px 20px 28px;
       display: flex;
       flex-direction: column;
       gap: 24px;
@@ -54,35 +55,20 @@
     }
 
     .sidebar-profile {
-      display: flex;
-      gap: 14px;
-      align-items: center;
-      margin-bottom: 6px;
+      width: 96px;
+      height: 96px;
+      border-radius: 50%;
+      overflow: hidden;
+      box-shadow: 0 10px 22px rgba(33, 49, 29, 0.22);
+      border: 3px solid rgba(67, 83, 57, 0.35);
+      margin: 0 auto;
     }
 
     .sidebar-profile img {
-      width: 72px;
-      height: 72px;
-      border-radius: 50%;
+      display: block;
+      width: 100%;
+      height: 100%;
       object-fit: cover;
-      box-shadow: 0 8px 16px rgba(33, 49, 29, 0.2);
-    }
-
-    .sidebar-name {
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
-    }
-
-    .sidebar-name strong {
-      font-size: 1.15rem;
-      color: var(--accent);
-      letter-spacing: 0.02em;
-    }
-
-    .sidebar-name span {
-      font-size: 0.85rem;
-      color: var(--muted);
     }
 
     .sidebar-subtitle {
@@ -103,6 +89,7 @@
       display: flex;
       flex-direction: column;
       gap: 6px;
+      width: 100%;
     }
 
     .album-link {
@@ -120,6 +107,7 @@
       display: flex;
       align-items: center;
       gap: 10px;
+      width: 100%;
     }
 
     .album-link:hover {
@@ -136,7 +124,7 @@
     }
 
     .album-link.root {
-      font-size: 1.05rem;
+      font-size: 1.15rem;
       font-weight: 700;
       color: var(--accent);
     }
@@ -175,20 +163,22 @@
 
     .profile-hero {
       display: flex;
-      flex-direction: column;
-      gap: 6px;
-      padding: 28px 36px 20px;
+      align-items: center;
+      justify-content: space-between;
+      gap: 24px;
+      padding: 24px 36px 18px;
       background: linear-gradient(135deg, rgba(67, 83, 57, 0.08) 0%, rgba(205, 187, 153, 0.2) 100%);
       border-bottom: 1px solid rgba(67, 83, 57, 0.18);
     }
 
     .profile-avatar {
-      width: 96px;
-      height: 96px;
+      width: 118px;
+      height: 118px;
       border-radius: 50%;
       overflow: hidden;
       border: 3px solid rgba(67, 83, 57, 0.35);
       box-shadow: 0 10px 24px rgba(33, 49, 29, 0.2);
+      flex-shrink: 0;
     }
 
     .profile-avatar img {
@@ -198,9 +188,16 @@
       display: block;
     }
 
+    .profile-copy {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      gap: 6px;
+    }
+
     .profile-copy h1 {
       margin: 0;
-      font-size: 1.9rem;
+      font-size: 2.2rem;
       font-weight: 700;
       color: var(--accent);
     }
@@ -208,7 +205,24 @@
     .profile-copy p {
       margin: 0;
       color: var(--muted);
-      font-size: 1rem;
+      font-size: 1.05rem;
+    }
+
+    .profile-mark {
+      width: 92px;
+      height: 92px;
+      opacity: 0.92;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-shrink: 0;
+    }
+
+    .profile-mark img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      display: block;
     }
 
     #contentHeader {
@@ -301,29 +315,51 @@
     }
 
     .album-grid {
-      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
     }
 
     .image-grid {
       flex: 1;
       overflow-y: auto;
       padding: 24px 36px 32px;
-      column-width: 220px;
-      column-gap: 14px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 8px;
+      justify-content: flex-start;
     }
 
     @media (max-width: 1280px) {
       .image-grid {
-        column-width: 200px;
-        column-gap: 12px;
+        padding: 24px;
+        gap: 8px;
+      }
+
+      .image-grid .mosaic-item {
+        flex-basis: clamp(190px, 30%, 240px);
       }
     }
 
     @media (max-width: 900px) {
       .image-grid {
-        padding: 24px;
-        column-width: 190px;
-        column-gap: 12px;
+        padding: 24px 20px 28px;
+        gap: 8px;
+      }
+
+      .image-grid .mosaic-item {
+        flex-basis: clamp(175px, 48%, 210px);
+      }
+    }
+
+    @media (max-width: 640px) {
+      .profile-hero {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 12px;
+      }
+
+      .profile-mark {
+        width: 72px;
+        height: 72px;
       }
     }
 
@@ -380,15 +416,17 @@
 
     .album-overlay {
       position: absolute;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      padding: 18px 20px 16px;
-      background: linear-gradient(180deg, rgba(23, 30, 22, 0.1) 0%, rgba(23, 30, 22, 0.85) 100%);
+      left: 12px;
+      right: 12px;
+      bottom: 12px;
+      padding: 12px 14px;
+      background: rgba(23, 30, 22, 0.78);
       color: #fdfcf8;
       display: flex;
       flex-direction: column;
-      gap: 6px;
+      gap: 4px;
+      border-radius: var(--radius-sm);
+      box-shadow: 0 12px 24px rgba(23, 30, 22, 0.28);
     }
 
     .album-name {
@@ -399,36 +437,23 @@
 
     .album-meta {
       font-size: 0.85rem;
-      display: flex;
-      gap: 12px;
-      align-items: center;
-      color: rgba(253, 252, 248, 0.82);
-    }
-
-    .album-meta span::before {
-      content: "";
-      display: inline-block;
-      width: 4px;
-      height: 4px;
-      border-radius: 50%;
-      background: rgba(253, 252, 248, 0.6);
-      margin-right: 10px;
-    }
-
-    .album-meta span:first-child::before {
-      display: none;
+      color: rgba(253, 252, 248, 0.86);
     }
 
     .mosaic-item {
       position: relative;
-      break-inside: avoid;
-      margin-bottom: 16px;
+      width: clamp(250px, 24%, 320px);
       border-radius: var(--radius-md);
       overflow: hidden;
       background: #efe3ca;
       box-shadow: 0 10px 18px rgba(33, 49, 29, 0.14);
       transition: transform 0.2s ease, box-shadow 0.2s ease;
       cursor: zoom-in;
+      margin: 0;
+    }
+
+    .image-grid .mosaic-item {
+      flex: 0 1 clamp(250px, 24%, 320px);
     }
 
     .mosaic-item img {
@@ -698,11 +723,7 @@
   <div id="app">
     <aside id="sidebar">
       <div class="sidebar-profile">
-        <img src="assets/img/amarantha-avatar.svg" alt="amarantha profile photo">
-        <div class="sidebar-name">
-          <strong>amarantha</strong>
-          <span>postcrossing collector</span>
-        </div>
+        <img src="assets/img/amarantha-avatar.jpg" alt="Portrait of amarantha with her dog" onerror="this.onerror=null;this.src='assets/img/amarantha-avatar.svg';">
       </div>
       <div>
         <div class="sidebar-subtitle">Browse</div>
@@ -716,14 +737,14 @@
     <main id="content">
       <section class="profile-hero">
         <div class="profile-avatar">
-          <img src="assets/img/amarantha-avatar.svg" alt="Portrait of amarantha with her dog">
+          <img src="assets/img/amarantha-avatar.jpg" alt="Portrait of amarantha with her dog" onerror="this.onerror=null;this.src='assets/img/amarantha-avatar.svg';">
         </div>
         <div class="profile-copy">
           <h1>amarantha&rsquo;s albums for swap</h1>
           <p>A living collection of postcards ready to travel.</p>
         </div>
         <div class="profile-mark">
-          <img src="assets/img/amarantha-logo.svg" alt="amarantha wordmark">
+          <img src="assets/img/amarantha-logo.jpg" alt="amarantha wordmark" onerror="this.onerror=null;this.src='assets/img/amarantha-logo.svg';">
         </div>
       </section>
       <div id="contentHeader">
@@ -772,11 +793,9 @@
     let currentContext = { type: 'albums', value: null };
     let currentIndex = -1;
     let ignoreHashChange = false;
-    const ALBUM_VIEWS_KEY = 'cardgallery_album_views';
-    let albumViews = loadAlbumViews();
-    const ALBUM_ORDER = [
-      // Example: 'postcards/collection-01', 'Art'
-    ];
+    // Optional manual album ordering. Use folder IDs (e.g. 'postcards/collection-01')
+    // or display names (e.g. 'Blue Cats') to enforce a custom sequence.
+    const ALBUM_ORDER = [];
 
     const sidebarTagList = document.getElementById('tagList');
     const albumListEl = document.getElementById('albumList');
@@ -791,34 +810,6 @@
     const lightboxTitle = document.getElementById('lightboxTitle');
     const lightboxDescription = document.getElementById('lightboxDescription');
     const lightboxTags = document.getElementById('lightboxTags');
-
-    function loadAlbumViews() {
-      try {
-        const raw = localStorage.getItem(ALBUM_VIEWS_KEY);
-        if (!raw) return {};
-        return JSON.parse(raw);
-      } catch {
-        return {};
-      }
-    }
-
-    function saveAlbumViews() {
-      try {
-        localStorage.setItem(ALBUM_VIEWS_KEY, JSON.stringify(albumViews));
-      } catch {
-        // Silent fail (e.g. private mode)
-      }
-    }
-
-    function incrementAlbumView(id) {
-      albumViews[id] = (albumViews[id] || 0) + 1;
-      saveAlbumViews();
-      return albumViews[id];
-    }
-
-    function getAlbumViews(id) {
-      return albumViews[id] || 0;
-    }
 
     function formatCount(value, singular, plural) {
       const abs = Math.abs(value);
@@ -981,8 +972,11 @@
           cell.className = 'album-thumb';
           if (item) {
             const img = document.createElement('img');
-            img.src = item.thumb;
-            img.alt = item.title;
+            const thumbSrc = item.url ? transformCloudinaryUrl(item.url, 400) : item.thumb;
+            img.src = thumbSrc || item.thumb || item.url;
+            img.alt = item.title || item.public_id;
+            img.loading = 'lazy';
+            img.decoding = 'async';
             cell.appendChild(img);
           } else {
             cell.classList.add('placeholder');
@@ -998,11 +992,7 @@
 
         const meta = document.createElement('div');
         meta.className = 'album-meta';
-        const count = document.createElement('span');
-        count.textContent = formatCount(album.items.length, 'photo', 'photos');
-        const views = document.createElement('span');
-        views.textContent = formatCount(getAlbumViews(album.id), 'view', 'views');
-        meta.append(count, views);
+        meta.textContent = formatCount(album.items.length, 'photo', 'photos');
 
         overlay.append(name, meta);
         card.append(previews, overlay);
@@ -1028,9 +1018,11 @@
         figure.className = 'mosaic-item';
 
         const img = document.createElement('img');
-        img.src = transformCloudinaryUrl(item.url, 820);
+        const preview = transformCloudinaryUrl(item.url, 640) || item.thumb || item.url;
+        img.src = preview;
         img.alt = item.title || item.public_id;
         img.loading = 'lazy';
+        img.decoding = 'async';
         figure.appendChild(img);
 
         if (item.title || item.description) {
@@ -1092,9 +1084,8 @@
       }
 
       currentContext = { type: 'album', value: albumId };
-      const totalViews = incrementAlbumView(albumId);
       viewTitle.textContent = album.name;
-      viewSubtitle.textContent = `${formatCount(album.items.length, 'photo', 'photos')} | ${formatCount(totalViews, 'view', 'views')}`;
+      viewSubtitle.textContent = formatCount(album.items.length, 'photo', 'photos');
       setBackLinkVisible(true);
 
       albumsView.classList.add('hidden');
@@ -1117,7 +1108,7 @@
       const label = tagLabels[tagCode] || tagCode;
 
       viewTitle.textContent = label;
-      viewSubtitle.textContent = `${formatCount(items.length, 'photo', 'photos')} with this tag`;
+      viewSubtitle.textContent = formatCount(items.length, 'photo', 'photos');
       setBackLinkVisible(true);
 
       albumsView.classList.add('hidden');
@@ -1172,6 +1163,7 @@
     });
 
     function transformCloudinaryUrl(url, width) {
+      if (!url) return url;
       try {
         const marker = '/upload/';
         const idx = url.indexOf(marker);
